- Replaced React icon with text CHIKRABANE - Increased logo font size and applied bold weight - Centered menu items using flex properties - Adjusted mobile menu styling for better alignment - Improved responsive behavior and spacing - Fixed positioning for mobile menu - Enhanced hover effects and transitions

--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -1,4 +1,4 @@
-.navbar{
+.navbar {
     background-color: var(--yellow-theme-nav-background-color);
     height: 80px;
     display: flex;
@@ -7,28 +7,39 @@
     font-size: 1.2rem;
     position: sticky;
 
-    &__container{
+    &__container {
         display: flex;
+        justify-content: space-between;
         align-items: center;
         width: 100%;
         height: inherit;
-        padding: 0px 20px;
-        flex: 1;
+        padding: 0 20px;
+        position: relative;
 
-        &__logo{
+        &__logo {
             color: var(--yellow-theme-main-color);
             cursor: pointer;
+            text-decoration: none;
+            font-size: 2.5rem;
+            font-weight: bold;
+            flex-shrink: 0;
         }
-        &__menu{
+
+        &__menu {
             display: flex;
             list-style: none;
-            text-align: center;
+            margin: 0;
+            padding: 0;
+            flex: 1;
+            justify-content: center;
+            align-items: center;
 
-            &__item{
-                line-height: 40px;
-                margin-right: 1.5rem;
+            &__item {
+                margin: 0 1.5rem;
                 font-size: 1.6rem;
-                &::after{
+                text-align: center;
+
+                &::after {
                     content: '';
                     display: block;
                     height: 3px;
@@ -36,54 +47,64 @@
                     background: transparent;
                     transition: all 0.5s ease;
                 }
-                &:hover::after{
+
+                &:hover::after {
                     width: 100%;
                     background: var(--yellow-theme-main-color);
                 }
-                &__links{
+
+                &__links {
                     color: var(--yellow-theme-main-color);
                     text-decoration: none;
                     padding: 0.5rem;
+                    display: block;
                 }
             }
         }
-
     }
-   
 }
-.nav-icon{
+
+.nav-icon {
     display: none;
-}
-
-
-@media only screen and (max-width : 768px){
-.navbar__container__menu{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%; 
-    position: absolute;
-    top: 80px;
-    left: -110%;
-    opacity: 1;
-    transition: all 0.5s ease ;
-
-    &.active{
-        background-color: #181818;
-        left: 0px;
-        opacity: 1;
-    }
-
-    &__item{
-        border-bottom: 1px solid #282828;
-        margin: 0px;
-        padding: 20px 0px;
-    }
-}
-.nav-icon{
-    display: block;
-    cursor: pointer;
     color: var(--yellow-theme-main-color);
+    cursor: pointer;
 }
+
+@media only screen and (max-width: 768px) {
+    .navbar__container {
+        &__logo {
+            font-size: 2rem;
+        }
+
+        &__menu {
+            position: absolute;
+            top: 80px;
+            left: -100%;
+            width: 100%;
+            height: calc(100vh - 80px);
+            flex-direction: column;
+            background-color: #181818;
+            transition: all 0.5s ease;
+            padding: 20px 0;
+
+            &.active {
+                left: 0;
+            }
+
+            &__item {
+                width: 100%;
+                margin: 0;
+                padding: 15px 0;
+                border-bottom: 1px solid #282828;
+
+                &:last-child {
+                    border-bottom: none;
+                }
+            }
+        }
+    }
+
+    .nav-icon {
+        display: block;
+    }
 }
-    
